assets/sass/_custom.scss
html,body,*,::before,::after {
  box-sizing: border-box;
}
#mobile-toggle {
  right: 0!important;
}
#masthead .header-inner {
  @media screen and (max-width: 1159px) {
    position: relative;
    max-width: 100%;
  }
}
@media screen and (max-width: 820px) {
  header#masthead {
    padding-left: 22px;
    padding-right: 25px;
  }
}
section.portfolio {
  padding: 0;
  @media screen and (min-width:961px) {
    padding: 5px 5px 0;
  }
  .grid {
    margin: 0 0!important;
    figure {
      margin: 0 0;
      position: relative;
      width: 100%;
      float: none;
      border: 5px solid #FFF;
      img {
        display: block!important;
        width: 100%;
        height: auto;
      }
      &:has(img.resizer) {
        img.resizer {
          width: 100%;
          height: auto;
          float: left;
          pointer-events: none;
        }
        img:not(.resizer) {
          width: 100%!important;
          height: 100%!important;
          position: absolute;
          top: 0;
          left: 0;
          object-fit: cover;
          object-position: center;
          z-index: 5;
        }
      }
    }
  }
  .grid_1_image_row {
    margin-bottom: 2.5px;
  }
  .grid:not(.grid_1_image_row) {
    padding: 0 0;
  }
  .grid-inner {
    position: relative;
    display: flex;
    flex-wrap: wrap;
  }
  .grid_2_image_row {
    .grid-item {
      width: 50%;
      padding: 0;
    }
  }
  .grid_3_image_row {
    .grid-item {
      width: 33.333%;
      padding: 0;
    }
  }

  @media screen and (max-width:768px) {
    .grid .grid-item {
      width: 100%!important;
      padding-left: 0!important;
      padding-right: 0!important;
    }
  }
}
footer.site-footer {
  overflow: auto;
  &:before {
    content: "";
    clear: both;
    display: table;
  }
}

